# PowerToysRunEnhance

./: CHANGELOG.rst  LICENSE  PowerToysRunEnhance.py  README.md  README_ZH.md  config.toml  pyproject.toml  readme.md
.github/workflows/: ci.yaml  release.yaml
config/: config.toml.example
config/release-templates/: .release_notes.md.j2
scripts/: build.bat  build.ps1
src/: config.toml  language.py  main.py  setup.iss  utils.py
src/i18n/: en_US.ts  ja_JP.ts  zh_CN.ts
src/interfaces/: base.py  main.py  setting.py
