[project]
name = "powertoysrunenhance"
version = "0.0.4"
description = "A small tool that non-invasively replaces Windows Search with PowerToys Run."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyautogui>=0.9.54",
    "pystray>=0.19.5",
    "pywin32>=310",
    "pywinhook>=1.6.2",
    "toml>=0.10.2",
    "uiautomation>=2.0.20",
]
