[project]
name = "powertoysrunenhance"
version = "0.0.4"
description = "A small tool that non-invasively replaces Windows Search with PowerToys Run."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pyside6>=6.8.3",
    "pyside6-fluent-widgets[full]>=1.7.6",
    "tomlkit>=0.13.2",
    "uiautomation>=2.0.20",
    "winput>=1.5.0",
]
